# healthy_habits_tracker

./: .env.sample  .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_telegram_id_remove_user_username_and_more.py
