[tool.poetry]
name = "drf-kyrsa4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"
coverage = "^7.6.9"
django-cors-headers = "^4.6.0"
drf-yasg = "^1.21.8"
celery = "^5.4.0"
eventlet = "^0.38.1"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
